[package]
name = "dumbkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "1.8.0"
serde = { version = "1.0.136", features = ["derive"] }

[lib]
name = "libdumkv"
path = "src/lib.rs"

[[bin]]
name = "mem"
path = "src/mem.rs"
